cmake_minimum_required(VERSION 3.13)
##############################################################################################################

project(fty-sensor-gpio
  VERSION "1.0.0"
  DESCRIPTION "Agent to manage GPI sensors and GPO devices"
  LANGUAGES CXX)

##############################################################################################################
find_package(fty-cmake PATHS ${CMAKE_BINARY_DIR}/fty-cmake)
##############################################################################################################

etn_target(exe ${PROJECT_NAME}
    SOURCES
        src/fty_sensor_gpio_assets.cc
        src/fty_sensor_gpio_server.cc
        src/libgpio.cc
        src/fty_sensor_gpio.cc
        src/*.h
    USES_PRIVATE
        czmq
        mlm
        fty_proto
        fty_common
        fty_common_logging
        fty_shm
)
 
# Agent config
etn_configure_file(
    resources/${PROJECT_NAME}.cfg.in
    TARGET      ${PROJECT_NAME}
    DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/${PROJECT_NAME}"
)

# systemd unit
etn_configure_file(
    resources/${PROJECT_NAME}.service.in
    TARGET      ${PROJECT_NAME}
    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/systemd/system/"
)

# systemd tmpfiles
etn_configure_file(
    resources/${PROJECT_NAME}.conf.in
    TARGET      ${PROJECT_NAME}
    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/tmpfiles.d/"
)

# udev rules files
etn_configure_file(
    resources/42ity-gpio-permissions.in
    TARGET      ${PROJECT_NAME}
    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/udev/"
)
etn_configure_file(
    resources/42-ity-gpio.rules.in
    TARGET      ${PROJECT_NAME}
    DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/udev/rules.d/"
)

# GPI templates for known devices
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/DCS001.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/M12.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/VIB001.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/WLD012.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/XCELW.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/GPOGEN.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/MZXE-prealarm.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)
install(FILES ${PROJECT_SOURCE_DIR}/src/test/selftest-ro/data/MZXE-alarm.tpl DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/data)

if (BUILD_TESTING)

    etn_test(${PROJECT_NAME}-test
        SOURCES
            src/fty_sensor_gpio_assets.cc
            src/fty_sensor_gpio_server.cc
            src/libgpio.cc
            src/test/main.cc
            src/fty_sensor_gpio_private_selftest.cc
            #src/fty_sensor_gpio_selftest.cc
            src/*.h
        PREPROCESSOR -DCATCH_CONFIG_FAST_COMPILE
        USES_PRIVATE
            czmq
            mlm
            fty_proto
            fty_common
            fty_common_logging
            fty_shm
            Catch2::Catch2
            stdc++fs
            log4cplus
    )

    #copy selftest-ro for test
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/test/selftest-ro DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    file(MAKE_DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/selftest-rw)

    #enable coverage
    etn_coverage(${PROJECT_NAME}-test)

    #copy selftest-ro for test coverage
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/test/selftest-ro DESTINATION ${CMAKE_BINARY_DIR})
    file(MAKE_DIRECTORY  ${CMAKE_BINARY_DIR}/selftest-rw)
endif()